fix: dark mode

--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -116,6 +116,7 @@ button:hover, .button:hover, button:focus, .button:focus {
 }
 
 input, textarea {
+  background-color: #ffffff;
   border: 0;
   outline: none;
   border-bottom: 1px solid #ccc;
@@ -143,6 +144,19 @@ input:focus, textarea:focus {
   blockquote::before { color: rgba(127, 127, 255, .6); }
   a { color: #3391ff; }
   a:visited { color: #cc91ff; }
+  input, textarea {
+    background-color: #121212;
+    border-bottom: 1px solid #666;
+  }
+  input:hover, textarea:hover {
+    border-bottom-color: #999;
+  }
+  input:focus, textarea:focus {
+    border-bottom-color: #ccc;
+  }
+  button:hover, .button:hover, button:focus, .button:focus {
+    background-color: rgba(255, 218, 185, 0.3);
+  }
 }
 
 @media (min-width: 1500px) {
